--- a/Lead.Prim.Cater.UI/App.config
+++ b/Lead.Prim.Cater.UI/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+	<connectionStrings>
+		<add name="Cater" connectionString="data source=E:\学习用\项目练习\sqllite数据库操作\ItCast.db;version=3;"/>
+	</connectionStrings>
 </configuration>
